Add the GPU driver name to the F3 screen